samples/_failures_safe/1761255301_cba361_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d942566.c: In function ‘main’:
./samples/SAFE/__tmp_8d942566.c:172:26: error: ‘t’ undeclared (first use in this function)
  172 |         print_token_type(t
      |                          ^
./samples/SAFE/__tmp_8d942566.c:172:26: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_8d942566.c:172:27: error: expected ‘)’ at end of input
  172 |         print_token_type(t
      |                         ~ ^
      |                           )
./samples/SAFE/__tmp_8d942566.c:172:9: error: expected declaration or statement at end of input
  172 |         print_token_type(t
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8d942566.c:172:9: error: expected declaration or statement at end of input
